# sailfish-silica-background

./: CMakeLists.txt  colorlookup.cpp  colorlookup.h  gaussianblurcalculator.cpp  gaussianblurcalculator.h  resources.qrc  sailfishsilicabackground.cpp  sailfishsilicabackground.h
